# sd-scripts

./: Dockerfile  docker-compose.yaml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
custom/: tags_normalization.py
custom/test/: 原本_snapshot_1747809372127.txt  原本_にお_基本服_表情_06.txt
custom/test/text_file/: snapshot_1747809372127.txt  にお_基本服_表情_06.txt
