[project]
name = "sd-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate==0.30.0",
    "altair==4.2.2",
    "bitsandbytes==0.44.0",
    "diffusers[torch]==0.25.0",
    "easygui==0.98.3",
    "einops==0.7.0",
    "ftfy==6.1.1",
    "huggingface-hub==0.24.5",
    "lion-pytorch==0.0.6",
    "opencv-python==4.8.1.78",
    "prodigyopt==1.0",
    "pytorch-lightning==1.9.0",
    "pytorch-triton>=3.3.0",
    "safetensors==0.4.2",
    "tensorboard>=2.19.0",
    "toml==0.10.2",
    "torch==2.5.1+cu124",   # torchが2.6.0以上だと、bitsandbytesにエラーが出る
    "torchvision==0.20.1+cu124",
    "transformers==4.44.0",
    "voluptuous==0.13.1",
    "wandb>=0.19.11",
    "numpy<2.0",
    "imagesize>=1.4.1",
    "xformers",
]


[tool.uv]
environments = ["platform_machine == 'x86_64' and sys_platform == 'linux'"]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
pytorch-triton = { index = "pytorch-cu124" }
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
"triton" = { index = "pytorch-cu124" }